--- a/src/views/parts/footer.ejs
+++ b/src/views/parts/footer.ejs
@@ -1,3 +1,7 @@
+<br>
+<br>
+<br>
+<br>
 <footer class="footer">
     <div class="content has-text-centered">
         <p>
@@ -10,8 +14,8 @@
 
 
 <!-- Swiper JS -->
-<script src="js/swiper-bundle.min.js"></script>
+<script src="/js/swiper-bundle.min.js"></script>
 
-<script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 
 <!--<script src="js/snow.js"></script>-->
