--- a/src/views/parts/navigation.ejs
+++ b/src/views/parts/navigation.ejs
@@ -1,3 +1,5 @@
+
+
 <header class="header">
     <div class="container">
 
@@ -9,16 +11,20 @@
             <nav class="menu">
                 <ul class="menu__list">
                     <li class="menu__list-item">
-                        <a class="menu__list-link" href="/profile">Profile</a>
+                        <a class="menu__list-link" href="/profile"><%= (langue? langue["Profile"] : "Profile") %></a>
                     </li>
                     <li class="menu__list-item">
-                        <a class="menu__list-link" href="/ribbon">Ribbon</a>
+                        <a class="menu__list-link" href="/ribbon"><%= (langue? langue["Ribbon"] : "Ribbon") %></a>
                     </li>
                     <li class="menu__list-item">
-                        <a class="menu__list-link" href="/reciprocity">Reciprocity</a>
+                        <a class="menu__list-link" href="/reciprocity"><%= (langue? langue["Reciprocity"] : "Reciprocity") %></a>
                     </li>
                 </ul>
             </nav>
+            <select id="lang-switch">
+                <option value="en">English</option>
+                <option value="ru">Русский</option>
+            </select>
         </div>
     </div>
 </header>
